@@ -118,8 +118,15 @@ sub set_config_sslcertificatefile {
     $self->{ssl_cert_file} = as_abs_path($val);
 }
 
+# mimicing Apache's SSLCertificateChainFile
+sub set_config_sslcertificatechainfile {
+    my ($self, $val) = @_;
+    $self->{ssl_cert_chain_file} = as_abs_path($val);
+}
+
 sub ssl_private_key_file { return $_[0]{ssl_private_key_file} }
 sub ssl_cert_file        { return $_[0]{ssl_cert_file}        }
+sub ssl_cert_chain_file  { return $_[0]{ssl_cert_chain_file}  }
 
 sub set_config_oldssl {
     my ($self, $val) = @_;
