@@ -35,6 +35,11 @@ sub new {
                                            &Net::SSLeay::FILETYPE_PEM);
     Net::SSLeay::die_if_ssl_error("certificate");
 
+    if ($server->ssl_cert_chain_file) {
+        Net::SSLeay::CTX_use_certificate_chain_file ($ctx, $server->ssl_cert_chain_file); # 'server-cert-chain.pem',
+        Net::SSLeay::die_if_ssl_error("certificate chain file");
+    }
+
 
     my $ssl = Net::SSLeay::new($ctx) or die_now("Failed to create SSL $!");
     $self->{ssl} = $ssl;
